--- a/Szabadulos_Jatek.csproj
+++ b/Szabadulos_Jatek.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0EB8EDAD-A6A5-4515-AE28-161808A72DEA}</ProjectGuid>
+    <ProjectGuid>{A6820F97-A11F-4F97-8D63-8202CFA30727}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>Szabadulos_Jatek</RootNamespace>
     <AssemblyName>Szabadulos_Jatek</AssemblyName>
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -43,8 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Jatekos.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Szoba.cs" />
+    <Compile Include="Targy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
